syntax = "proto3";
package candy.meta;

option go_package = "meta";

import weak "gogoproto/gogo.proto";

import "common.proto";

//Push 推送 TODO
// 在线推送：android, ios, web
// 离线推送：apn,gcm
service Push {
    // Subscribe 订阅，取消，接收消息接口.
    rpc Subscribe(stream SubscribeRequest) returns (stream PushRequest);

    //Push store调用的接口.
    rpc Push(PushRequest) returns (PushResponse);
}



message SubscribeRequest {
    // 用户ID
    int64   ID      = 1; 
    // 是要订阅，还是要取消
    bool    Enable  = 2; 
    // 用来区分用户的设备，如同一设备多次从不同的gate登录上来，则只推送最新的gate连接 
    string  Device  = 3;
}


// PushRequest 推送的消息.
message PushRequest {
    repeated PushID ID = 1 [(gogoproto.nullable) = false];
    PushMessage Msg = 2 [(gogoproto.nullable) = false];
}

message PushResponse {
    ResponseHeader header = 1;
}
